--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <div class="brief-container">
         <div class="inner">
 
-            <h3>Safety Map</h3>
+            <h1>Melbourne Road Safety Portal</h1>
+            <br>
+            <hr>
+            <br>
             <p>
                 Developed by Julian Li and Meead Saberi <br>
                 City Science at Monash University<br>
@@ -38,7 +41,6 @@
 
 <section class="description" id="description">
     <div class="description-container">
-       <b> <h1 class="text-center">Melbourne Road Safety Portal</h1></b><br>
         <div id="summary">
             Australia has achieved substantial reductions in road crash fatalities over the last 30 years, despite a 50 per cent growth in population and a two-fold increase in registered motor vehicles. Between 1980 and 2010, the nation’s annual road fatality rate declined from 22.3 to 6.1 deaths per 100,000 people. However, it is still estimated that on average, around 1,400 people die and 33,000 are seriously injured each year on Australian roads. The Australian Bureau of Infrastructure, Transport and Regional Economics (BITRE) estimated that the annual cost of road trauma to the Australian society is 17.85 billion AUD.
             <br><br>In this project, we visualize crash data in Melbourne at the Statistical Area Level 2 (SA2), defined by the Australian Bureau of Statistics. We obtained the crash data from VicRoads between the years for 2010 to 2012. During this period, a total of 12,206 crashes were reported.  Total number of crashes were decreasing from 2010 to 2012.
@@ -46,107 +48,74 @@
     </div>
 </section>
 
+<div class="map">
+    <div id="zoom-in" class="zoom-btn leaflet-control-zoom-in">+</div>
+    <div id="zoom-out" class="zoom-btn leaflet-control-zoom-out">-</div>
 
-
-<div class="wrapper">
-    <div class="container">
-
-        <div class="left-sider">
-            <select class="selectpicker" data-width="auto" data-live-search="true" data-size="7">
-                <option value="total-p" >Total Population</option>
-                <option value="density-p">Total Population Density</option>
-                <option value="vehicle-p">Vehicle Kilometers Travelled (million)</option>
-                <option value="crash-p">Total Crashes</option>
-                <option value="crash-4-p">Crashes in which a 4-16 year old involved</option>
-                <option value="crash-60-p">Crashes in which a 60+ year old involved</option>
-                <option value="bike-p" data-subtext="scroll down to see more">Bicycle Crashes</option>
-                <option value="pedestrian-p">Pedestrian Crashes</option>
-                <option value="motor-p">Motorbike Crashes</option>
-                <option value="truck-p">Truck Crashes</option>
-                <option value="fatal-p">Fatal Crashes</option>
-                <option value="severe-p">Severe Injury Crashes</option>
-                <option value="night-p">Nighttime Crashes</option>
-                <option value="weekday-p">Weekday Crashes</option>
-                <option value="weekend-p">Weekend Crashes</option>
-            </select>
-            <!--<div class="wrapper-demo">-->
-                <!--<div id="dd" class="wrapper-dropdown-3" tabindex="1000000">-->
-                    <!--<span>Total Population</span>-->
-                    <!--<ul class="dropdown" style="z-index:900099999999;">-->
-                        <!--<li id="total-p"><a href="#"><i class="fa fa-user icon-large"></i>Total Population</a></li>-->
-                        <!--<li id="density-p"><a href="#"><i class="fa fa-users icon-large"></i>Total Population Density</a></li>-->
-                        <!--<li id="vehicle-p"><a href="#"><i class="fa fa-car icon-large"></i>Vehicle Kilometers Travelled (million)</a></li>-->
-                        <!--<li id="crash-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Total Crashes</a></li>-->
-                        <!--<li id="crash-4-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Crashes in which a 4-16 year old involved</a></li>-->
-                        <!--<li id="crash-60-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Crashes in which a 60+ year old involved</a></li>-->
-                        <!--<li id="bike-p"><a href="#"><i class="icon-plane icon-large"></i>Bicycle Crashes</a></li>-->
-                        <!--<li id="pedestrian-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Pedestrian Crashes</a></li>-->
-                        <!--<li id="motor-p"><a href="#"><i class="fa fa-motorcycle icon-large"></i>Motorbike Crashes</a></li>-->
-                        <!--<li id="truck-p"><a href="#"><i class="fa fa-truck icon-large"></i>Truck Crashes</a></li>-->
-                        <!--<li id="fatal-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Fatal Crashes</a></li>-->
-                        <!--<li id="severe-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Severe Injury Crashes</a></li>-->
-                        <!--<li id="night-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Nighttime Crashes</a></li>-->
-                        <!--<li id="weekday-p"><a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Weekday Crashes</a></li>-->
-                        <!--<li id="weekend-p"> <a href="#"><i class="fa fa-exclamation-triangle icon-large"></i>Weekend Crashes</a></li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-                <!--​</div>-->
-
-
-            <div class="prediction" style="margin-left: 30px;">
-                <h4 style="text-align: center">Predicting Crashes</h4>
-                <div class="col-xs-12">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label for="vktInput">Average VKT</label><span class="msg" id="vktmsg"></span>
-                            <input type="text" class="form-control input-sm" id="vktInput" placeholder="e.g. 10988778">
-                        </div>
-                        <div class="form-group">
-                            <label for="weeklyIncome">Percentage of Household with Weekly Income</label><span id="weeklymsg" class="msg"></span>
-                            <input type="text" class="form-control input-sm" id="weeklyIncome" placeholder="e.g. 2" aria-describedby="weeklyaddon">
-                        </div>
-                        <div class="form-group">
-                            <label for="bikePopulation">Percentage of Population that Bike to Work</label><span id="bikemsg" class="msg"></span>
-                            <input type="text" class="form-control input-sm" id="bikePopulation" placeholder="e.g. 2">
-                        </div>
-                        <div class="form-group">
-                            <label for="residential">Percentage of Residential Area</label><span id="residentmsg" class="msg"></span>
-                            <input type="text" class="form-control input-sm" id="residential" placeholder="e.g. 2">
-                        </div>
-                        <div class="form-group">
-                            <label for="commercial">Percentage of Commercial Area</label><span id="commercialmsg" class="msg"></span>
-                            <input type="text" class="form-control input-sm" id="commercial" placeholder="e.g. 2">
-                        </div>
-                        <div class="form-group">
-                            <label for="mixIndex">Land-use Balance Mix Index </label><span id="mixmsg" class="msg"></span>
-                            <input type="text" class="form-control input-sm" id="mixIndex" placeholder="e.g. 2">
-                        </div>
-                        <div class="form-group">
-                            <span id="predict" class="btn btn-default">Predict</span><span><h1 id="result"><b>Result</b></h1></span>
-                        </div>
-                    </form>
+    <div class="prediction">
+        <h4>Predicting Crashes</h4>
+        <div class="col-xs-12">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="vktInput">Average VKT</label><span class="msg" id="vktmsg"></span>
+                    <input type="text" class="form-control input-sm" id="vktInput" placeholder="e.g. 10988778">
                 </div>
-
-            </div>
-        </div>
-        <div class="right-sider">
-            <div class="chart-container">
-                <div class="rank-chart" id="rank-chart"></div>
-                <div class="his-chart" id="his-chart"></div>
-            </div>
-
-            <div id="map"></div>
-            <div class="leaflet-control-container">
-                <div class="leaflet-top leaflet-left">
-                    <div class="leaflet-control-zoom leaflet-bar leaflet-control">
-                        <div id="zoom-in" class="zoom-btn leaflet-control-zoom-in">+</div>
-                        <div id="zoom-out" class="zoom-btn leaflet-control-zoom-out">-</div>
-                    </div>
+                <div class="form-group">
+                    <label for="weeklyIncome">Percentage of Household<br> with Weekly Income</label><span id="weeklymsg" class="msg"></span>
+                    <input type="text" class="form-control input-sm" id="weeklyIncome" placeholder="e.g. 2" aria-describedby="weeklyaddon">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="bikePopulation">Percentage of Population <br>that Bike to Work</label><span id="bikemsg" class="msg"></span>
+                    <input type="text" class="form-control input-sm" id="bikePopulation" placeholder="e.g. 2">
+                </div>
+                <div class="form-group">
+                    <label for="residential">Percentage of Residential Area</label><span id="residentmsg" class="msg"></span>
+                    <input type="text" class="form-control input-sm" id="residential" placeholder="e.g. 2">
+                </div>
+                <div class="form-group">
+                    <label for="commercial">Percentage of Commercial Area</label><span id="commercialmsg" class="msg"></span>
+                    <input type="text" class="form-control input-sm" id="commercial" placeholder="e.g. 2">
+                </div>
+                <div class="form-group">
+                    <label for="mixIndex">Land-use Balance Mix Index </label><span id="mixmsg" class="msg"></span>
+                    <input type="text" class="form-control input-sm" id="mixIndex" placeholder="e.g. 2">
+                </div>
+                <div class="form-group">
+                    <span id="predict" class="btn btn-default">Predict</span><span id="result"></span>
+                </div>
+            </form>
         </div>
+
     </div>
+
+    <div id="select-menu">
+        <select class="selectpicker" data-width="auto" data-live-search="true" data-size="7">
+            <option value="total-p" >Total Population</option>
+            <option value="density-p">Total Population Density</option>
+            <option value="vehicle-p">Vehicle Kilometers Travelled (million)</option>
+            <option value="crash-p">Total Crashes</option>
+            <option value="crash-4-p">Crashes in which a 4-16 year old involved</option>
+            <option value="crash-60-p">Crashes in which a 60+ year old involved</option>
+            <option value="bike-p" data-subtext="scroll down to see more">Bicycle Crashes</option>
+            <option value="pedestrian-p">Pedestrian Crashes</option>
+            <option value="motor-p">Motorbike Crashes</option>
+            <option value="truck-p">Truck Crashes</option>
+            <option value="fatal-p">Fatal Crashes</option>
+            <option value="severe-p">Severe Injury Crashes</option>
+            <option value="night-p">Nighttime Crashes</option>
+            <option value="weekday-p">Weekday Crashes</option>
+            <option value="weekend-p">Weekend Crashes</option>
+        </select>
+    </div>
+
+    <div class="chart-container">
+        <div class="rank-chart" id="rank-chart"></div>
+        <div class="his-chart" id="his-chart"></div>
+    </div>
+   <div id="map"></div>
 </div>
+
+
 
 
 <div id="tooltip">
@@ -248,8 +217,8 @@
                 result = Math.round(result);
                 result = numberWithCommas(result);
 
-                $('#result').text('Result');
-                $('#result').append(': '+result+ ' crashes in the zone');
+                $('#result').text('');
+                $('#result').append(' '+result+ ' crashes in the zone');
             }
 
 
