--- a/test.html
+++ b/test.html
@@ -1,36 +1,108 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8 />
-    <title>TopoJSON Data</title>
-    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?1.29.1"></script>
+    <style type="text/css">
+
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .stations, .stations svg {
+            position: absolute;
+        }
+
+        .stations svg {
+            width: 60px;
+            height: 20px;
+            padding-right: 100px;
+            font: 10px sans-serif;
+        }
+
+        .stations circle {
+            fill: brown;
+            stroke: black;
+            stroke-width: 1.5px;
+        }
+
     </style>
 </head>
 <body>
-<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
+<div id="map"></div>
+<script type="text/javascript">
 
-<div id='map'></div>
+    // Create the Google Map…
+    var map = new google.maps.Map(d3.select("#map").node(), {
+        zoom: 8,
+        center: new google.maps.LatLng(-37.80, 145.04),
+        mapTypeId: google.maps.MapTypeId.TERRAIN
+    });
 
-<script>
-    L.mapbox.accessToken = 'pk.eyJ1IjoiaHlsYXNjYSIsImEiOiI1emkwM19vIn0.FNEUtuhBrfGtw9yicKlHmQ';
-    var map = L.mapbox.map('map', 'examples.map-i86nkdio').setView([145.1, -37.80], 13);
 
-    // Omnivore will AJAX-request this file behind the scenes and parse it:
-    // note that there are considerations:
-    // - The file must either be on the same domain as the page that requests it,
-    //   or both the server it is requested from and the user's browser must
-    //   support CORS.
 
-    // Internally this function uses the TopoJSON library to decode the given file
-    // into GeoJSON.
-    var usLayer = omnivore.topojson('pop.json')
-            .addTo(map);
 
-    console.log(usLayer);
+
+
+    // Load the station data. When the data comes back, create an overlay.
+    d3.json("pop.json", function(data) {
+
+
+
+
+
+
+        var overlay = new google.maps.OverlayView();
+
+        // Add the container when the overlay is added to the map.
+        overlay.onAdd = function() {
+            var layer = d3.select(this.getPanes().overlayLayer).append("div")
+                    .attr("class", "stations");
+
+            // Draw each marker as a separate SVG element.
+            // We could use a single SVG, but what size would it have?
+            overlay.draw = function() {
+                var projection = this.getProjection(),
+                        padding = 10;
+
+                var marker = layer.selectAll("svg")
+                        .data(d3.entries(data))
+                        .each(transform) // update existing markers
+                        .enter().append("svg:svg")
+                        .each(transform)
+                        .attr("class", "marker");
+
+                // Add a circle.
+                marker.append("svg:circle")
+                        .attr("r", 4.5)
+                        .attr("cx", padding)
+                        .attr("cy", padding);
+
+                // Add a label.
+                marker.append("svg:text")
+                        .attr("x", padding + 7)
+                        .attr("y", padding)
+                        .attr("dy", ".31em")
+                        .text(function(d) { return d.key; });
+
+                function transform(d) {
+                    d = new google.maps.LatLng(d.value[1], d.value[0]);
+                    d = projection.fromLatLngToDivPixel(d);
+                    return d3.select(this)
+                            .style("left", (d.x - padding) + "px")
+                            .style("top", (d.y - padding) + "px");
+                }
+            };
+        };
+
+        // Bind our overlay to the map…
+        overlay.setMap(map);
+    });
+
 </script>
 </body>
 </html>
