--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="brief-container">
         <div class="inner">
 
-            <h2>MELBOURNE ROAD SAFETY PORTAL</h2>
+            <h2><b>MELBOURNE ROAD SAFETY PORTAL</b></h2>
             <br>
             <p>
                 Institute of Transport Studies<br>
@@ -238,7 +238,7 @@
             if(valid)
             {
                 var result = 2.29632 + 0.31498 * Math.log(vktInput/1000) + 0.01699 * weeklyIncome + 0.04684 * bikeInput + 0.01024 * residentialInput + 0.02062 * commercialInput + 1.32814 * mixIndex;
-                result = Math.exp(result).toFixed(2);
+                result = Math.exp(result);
                 result = Math.round(result);
                 result = numberWithCommas(result);
 
