--- a/test.html
+++ b/test.html
@@ -1,108 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?1.29.1"></script>
-    <style type="text/css">
+    <title>chart created with amCharts | amCharts</title>
+    <meta name="description" content="chart created using amCharts live editor" />
 
-        html, body, #map {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
+    <!-- amCharts javascript sources -->
+    <script type="text/javascript" src="http://cdn.amcharts.com/lib/3/amcharts.js"></script>
+    <script type="text/javascript" src="http://www.amcharts.com/lib/3/serial.js"></script>
 
-        .stations, .stations svg {
-            position: absolute;
-        }
-
-        .stations svg {
-            width: 60px;
-            height: 20px;
-            padding-right: 100px;
-            font: 10px sans-serif;
-        }
-
-        .stations circle {
-            fill: brown;
-            stroke: black;
-            stroke-width: 1.5px;
-        }
-
-    </style>
+    <!-- amCharts javascript code -->
+    <script type="text/javascript">
+        AmCharts.makeChart("chartdiv",
+                {
+                    "type": "serial",
+                    "path": "http://www.amcharts.com/lib/3/",
+                    "categoryField": "category",
+                    "startDuration": 1,
+                    "theme": "default",
+                    "categoryAxis": {
+                        "gridPosition": "start"
+                    },
+                    "trendLines": [],
+                    "graphs": [
+                        {
+                            "balloonText": "[[title]] of [[category]]:[[value]]",
+                            "bullet": "round",
+                            "gapPeriod": 3,
+                            "id": "AmGraph-1",
+                            "title": "road fatality rate",
+                            "valueField": "column-1"
+                        }
+                    ],
+                    "guides": [],
+                    "valueAxes": [
+                        {
+                            "id": "ValueAxis-1",
+                            "dashLength": 1,
+                            "gridCount": 0,
+                            "gridThickness": 0,
+                            "minorGridAlpha": 0,
+                            "offset": -4,
+                            "title": ""
+                        }
+                    ],
+                    "allLabels": [],
+                    "balloon": {},
+                    "legend": {
+                        "useGraphSettings": true
+                    },
+                    "titles": [
+                        {
+                            "id": "Title-1",
+                            "size": 15,
+                            "text": ""
+                        }
+                    ],
+                    "dataProvider": [
+                        {
+                            "category": "1980",
+                            "column-1": "22.3"
+                        },
+                        {
+                            "category": "2010",
+                            "column-1": "6.1"
+                        }
+                    ]
+                }
+        );
+    </script>
 </head>
 <body>
-<div id="map"></div>
-<script type="text/javascript">
-
-    // Create the Google Map…
-    var map = new google.maps.Map(d3.select("#map").node(), {
-        zoom: 8,
-        center: new google.maps.LatLng(-37.80, 145.04),
-        mapTypeId: google.maps.MapTypeId.TERRAIN
-    });
-
-
-
-
-
-
-    // Load the station data. When the data comes back, create an overlay.
-    d3.json("pop.json", function(data) {
-
-
-
-
-
-
-        var overlay = new google.maps.OverlayView();
-
-        // Add the container when the overlay is added to the map.
-        overlay.onAdd = function() {
-            var layer = d3.select(this.getPanes().overlayLayer).append("div")
-                    .attr("class", "stations");
-
-            // Draw each marker as a separate SVG element.
-            // We could use a single SVG, but what size would it have?
-            overlay.draw = function() {
-                var projection = this.getProjection(),
-                        padding = 10;
-
-                var marker = layer.selectAll("svg")
-                        .data(d3.entries(data))
-                        .each(transform) // update existing markers
-                        .enter().append("svg:svg")
-                        .each(transform)
-                        .attr("class", "marker");
-
-                // Add a circle.
-                marker.append("svg:circle")
-                        .attr("r", 4.5)
-                        .attr("cx", padding)
-                        .attr("cy", padding);
-
-                // Add a label.
-                marker.append("svg:text")
-                        .attr("x", padding + 7)
-                        .attr("y", padding)
-                        .attr("dy", ".31em")
-                        .text(function(d) { return d.key; });
-
-                function transform(d) {
-                    d = new google.maps.LatLng(d.value[1], d.value[0]);
-                    d = projection.fromLatLngToDivPixel(d);
-                    return d3.select(this)
-                            .style("left", (d.x - padding) + "px")
-                            .style("top", (d.y - padding) + "px");
-                }
-            };
-        };
-
-        // Bind our overlay to the map…
-        overlay.setMap(map);
-    });
-
-</script>
+<div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
 </body>
 </html>
