--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         <br>
         <br>
+  <div class="container">
         <div class="row">
             <div class="col-xs-4">
                 <div class="thumbnail">
@@ -86,16 +87,18 @@
             </div>
         </div>
 
-        <br>
-        <br>
-        <br>
+
+      <br>
+      <br>
+      <br>
         <div class="row">
             <h2 class="text-center">Our project</h2>
             <div class="summary text-center">
                 In this project, we visualize crash data in Melbourne at the Statistical Area Level 2 (SA2), defined by the Australian Bureau of Statistics. We obtained the crash data from VicRoads between the years for 2010 to 2012. During this period, a total of 12,206 crashes were reported.  Total number of crashes were decreasing from 2010 to 2012.
             </div>
         </div>
-    </div>
+     </div>
+   </div>
 </section>
 
 
@@ -185,8 +188,8 @@
 <script src="js/lib/loadingoverlay.min.js"></script>
 <script>
     $.LoadingOverlaySetup({
-        color           : "rgba(255, 255, 255, 1)",
-        image           : "images/loading.gif",
+        color           : "rgba(255,143,61, 1)",
+        image           : "images/loader.gif",
         maxSize         : "80px",
         minSize         : "20px",
         resizeInterval  : 0,
