--- a/index.html
+++ b/index.html
@@ -39,66 +39,12 @@
 </section>
 
 <section class="description" id="description">
-    <div class="description-container container-fluid">
-        <div class="row">
-            <h2 class="text-center">The current safety overview</h2>
+    <div class="description-container">
+        <div id="summary">
+            Australia has achieved substantial reductions in road crash fatalities over the last 30 years, despite a 50 per cent growth in population and a two-fold increase in registered motor vehicles. Between 1980 and 2010, the nation’s annual road fatality rate declined from 22.3 to 6.1 deaths per 100,000 people. However, it is still estimated that on average, around 1,400 people die and 33,000 are seriously injured each year on Australian roads. The Australian Bureau of Infrastructure, Transport and Regional Economics (BITRE) estimated that the annual cost of road trauma to the Australian society is 17.85 billion AUD.
+            <br><br>In this project, we visualize crash data in Melbourne at the Statistical Area Level 2 (SA2), defined by the Australian Bureau of Statistics. We obtained the crash data from VicRoads between the years for 2010 to 2012. During this period, a total of 12,206 crashes were reported.  Total number of crashes were decreasing from 2010 to 2012.
         </div>
-
-        <div class="summary text-center">
-            Australia has achieved substantial reductions in road crash fatalities over the last 30 years, despite a 50 per cent growth in population and a two-fold increase in registered motor vehicles.
-        </div>
-
-        <br>
-        <br>
-  <div class="container">
-        <div class="row">
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <div id="fatality" style="width: 100%; height: 220px;" ></div>
-                    <div class="caption text-center">
-                        <h3>Recent Road Fatality Rate</h3>
-                        <p>Between 1980 and 2010, the nation’s annual road fatality rate declined from 22.3 to 6.1 deaths per 100,000 people.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <div class="image-container text-center">
-                         <img src=images/die.png id="die">
-                    </div>
-                    <div class="caption text-center">
-                        <h3>Road Accidents</h3>
-                        <p>However, it is still estimated that on average, around 1,400 people die and 33,000 are seriously injured each year on Australian roads. </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-4">
-                <div class="thumbnail">
-                    <div class="image-container text-center">
-                        <img src=images/money.png id="money">
-                    </div>
-                    <div class="caption text-center">
-                        <h3>Cost On Safety</h3>
-                        <p>The Australian Bureau of Infrastructure, Transport and Regional Economics (BITRE) estimated that the annual cost of road trauma to the Australian society is 17.85 billion AUD.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-      <br>
-      <br>
-      <br>
-        <div class="row">
-            <h2 class="text-center">Our project</h2>
-            <div class="summary text-center">
-                In this project, we visualize crash data in Melbourne at the Statistical Area Level 2 (SA2), defined by the Australian Bureau of Statistics. We obtained the crash data from VicRoads between the years for 2010 to 2012. During this period, a total of 12,206 crashes were reported.  Total number of crashes were decreasing from 2010 to 2012.
-            </div>
-        </div>
-     </div>
-   </div>
+    </div>
 </section>
 
 
