--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 </div>
 
 
-<div class="charts">
-    <b><h1 class="result-zone text-center">Melbourne</h1></b>
+<div class="charts" style="margin-top:100px;">
+    <b><h1 class="result-zone text-center" style="font-weight: 700;">Melbourne</h1></b>
     <h3 class="text-center">General crash statistics in 2013</h3>
 
         <div style="width:60%; margin-left: auto; margin-right: auto;">
@@ -143,10 +143,11 @@
             </table>
         </div>
 
-
-        <h5 class="text-center">The number of <span id="crash-type">total crashes</span> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> based on data provided by VicRoads, changed from 2009</h5><br>
+  <div class="">
+        <h3 class="text-center" style="font-weight:700;">Total Crashes</h3>
+        <h5 class="text-center">The number of <span id="crash-type">total crashes</span> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> changed from 2009, based on data provided by VicRoads</h5><br>
         <div id="detail-chart" style="height:300px; width:50%; margin-right:auto; margin-left:auto;"></div>
-
+  </div>
 
 </div>
 
