--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
         </div>
 
   <div class="">
-        <h3 class="text-center" style="font-weight:700;">Total Crashes</h3>
-        <h5 class="text-center">The number of <span id="crash-type">total crashes</span> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> changed from 2009, based on data provided by VicRoads</h5><br>
+        <h3 class="text-center" id="titleofchart" style="font-weight:700;">Total Crashes</h3>
+        <h5 class="text-center">The number of <b><span id="crash-type">Total Crashes</span></b> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> changed from 2009, based on data provided by VicRoads</h5><br>
         <div id="detail-chart" style="height:300px; width:50%; margin-right:auto; margin-left:auto;"></div>
   </div>
 
