new histogram and rank data

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                     <th>Bicycle Crashes</th>
                 </tr>
                 <tr>
-                    <td class="crash-data">9934</td>
-                    <td>N/A</td>
-                    <td>N/A</td>
-                    <td>N/A</td>
+                    <td class="total-crash-data">9934</td>
+                    <td class="fatal-crash-data">99</td>
+                    <td class="pedestrian-crash-data">1105</td>
+                    <td class="bike-crash-data">1294</td>
                 </tr>
             </table>
         </div>
