--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <h4><b>Prediction Panel</b></h4>
         <div class="col-xs-12">
             <form class="form-horizontal">
+                <input type="hidden" class="factor">
                 <div class="form-group">
                     <label for="vktInput">Average VKT</label><span class="msg" id="vktmsg"></span>
                     <input type="text" class="form-control input-sm" id="vktInput" placeholder="e.g. 10988778">
@@ -236,6 +237,7 @@
             var residentialInput = parseFloat($('#residential').val());
             var commercialInput = parseFloat($('#commercial').val());
             var mixIndex = parseFloat($('#mixIndex').val());
+            var adjustmentFactor = parseFloat($('.factor').val());
 
             var valid = true;
 
@@ -272,10 +274,15 @@
 
             if(valid)
             {
-                var result = 2.29632 + 0.31498 * Math.log(vktInput/1000) + 0.01699 * weeklyIncome + 0.04684 * bikeInput + 0.01024 * residentialInput + 0.02062 * commercialInput + 1.32814 * mixIndex;
+
+                var result = 1.552 + 0.301 * Math.log(vktInput) + 0.017 * weeklyIncome + 0.032 * bikeInput + 0.011 * residentialInput + 0.009 * commercialInput + 1.195 * mixIndex;
                 result = Math.exp(result);
+                result = result * adjustmentFactor/3 ;
                 result = Math.round(result);
                 result = numberWithCommas(result);
+
+
+                console.log(adjustmentFactor);
 
 
                 $('#result').text('');
